tests/errors/ArrayInitializerType.java
class ArrayInitializerType {
    int i[] = {3, "xxx"};
}
